fix(movie-service): Aplicada correcciones al servicio de peliculas
