# backend/movie-service/src/main/java/pe/edu/utp/cinestar/movie_service/controller/MovieController.java
@@ -5,6 +5,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import pe.edu.utp.cinestar.movie_service.model.dto.MovieCarteleraResponse;
+import pe.edu.utp.cinestar.movie_service.model.dto.MovieDetailResponse;
 import pe.edu.utp.cinestar.movie_service.model.dto.UpdateMovieRequest;
 import pe.edu.utp.cinestar.movie_service.model.Movie;
 import pe.edu.utp.cinestar.movie_service.service.MovieService;
@@ -35,13 +36,13 @@ public class MovieController {
     @GetMapping("/admin")
     @PreAuthorize("hasRole('ROLE_ADMINISTRADOR')")
     public ResponseEntity<List<Movie>> getAllMoviesAdmin(
-            @RequestParam(value = "status", required = false) String status, 
+            @RequestParam(value = "status", required = false) String status,
             @RequestParam(value = "search", required = false) String search) {
         return ResponseEntity.ok(movieService.getAllMoviesAdmin(status, search));
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<Movie> getMovieById(@PathVariable("id") Long id) {
+    public ResponseEntity<MovieDetailResponse> getMovieById(@PathVariable("id") Long id) {
         return ResponseEntity.ok(movieService.getMovieById(id));
     }
 
@@ -58,9 +59,9 @@ public class MovieController {
         return ResponseEntity.noContent().build();
     }
 
-    @GetMapping("/cartelera")
+    @GetMapping
     public ResponseEntity<List<MovieCarteleraResponse>> getCartelera(
-            @RequestParam(value = "genre", required = false) String genre, 
+            @RequestParam(value = "genre", required = false) String genre,
             @RequestParam(value = "search", required = false) String search) {
         return ResponseEntity.ok(movieService.getCartelera(genre, search));
     }
